--- a/pages/intro.html
+++ b/pages/intro.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tags de Texto</title>
+</head>
+<body>
 TAGS DE TEXTO
 Aqui vamos aprender sobre tags para formatação de texto.
 
@@ -15,15 +23,7 @@ Texto destacado
 Texto menor
 Podemos deixar também o Texto sobrescrito
 Ou o Texto subescrito
+</body>
+</html>
 
-Ah! Temos as TAGS SEMANTICAS, que possuem algumas razões de existirem: 
-- Ajudam o browser a entender o significado do texto
-- Ajudam os motores de busca a indexar o conteúdo. 
-- Ajudam os leitores de tela a ler o conteúdo para deficientes visuais.
-- Ajudam os tradutores automáticos a traduzir o conteúdo.
 
-Exemplos:
-- Strong deixa o texto forte
-- Emphasis dá ênfase ao texto
-- Delete te diz para desconsiderar um trecho deletado
-- Insert diz para considerar um trecho inserido
