--- a/pages/estrutura-basica.html
+++ b/pages/estrutura-basica.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html> 
 <html lang="pt-br"> 
 <head> 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Automation Day Pitching">
-    <meta name="keywords" content="HTML, XPath">
-    <meta name="author" content="José Avelino">
-    <link rel="shortcut icon" href="../media/robot.png" type="image/x-icon">
     <title>Título da pág.</title>
 </head>
 <body>
 
     O CORPO DA PÁGINA
-    É ONDE FICAM OS ELEMENTOS VISÍVEIS
+    É onde ficam os elementos visíseis
 
 </body>
 </html>
+ 
