--- a/pages/tags-semanticas.html
+++ b/pages/tags-semanticas.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tags Semânticas</title>
+</head>
+<body>
+    <nav>
+        <a href="#">Tags Básicas</a> | 
+        <a href="tags-de-texto.html">Tags de Texto</a> |
+        <a href="tags-semanticas.html">Tags Semanticas</a> |
+        <a href="tags-de-formularios.html">Tags de Formulário</a> |
+        <a href="tags-containers">Tags Containers</a> |
+    </nav>
+
 Ah! Temos as TAGS SEMANTICAS, que possuem algumas razões de existirem: 
 - Ajudam os navegadores e sistemas a entenderem melhor a estrutura do site
 - Melhora a acessibilidade para usuários com deficiências (leitores de telas para deficientes visuais, por exemplo.)
@@ -9,3 +25,7 @@ Exemplos:
 - Emphasis dá ênfase ao texto
 - Delete te diz para desconsiderar um trecho deletado
 - Insert diz para considerar um trecho inserido
+
+</body>
+</html>
+
